--- a/app/src/main/res/drawable-v24/rounded_button.xml
+++ b/app/src/main/res/drawable-v24/rounded_button.xml
@@ -1,11 +1,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#38a0cd"/>
+            <solid android:color="#E54728"/>
             <corners android:radius="27dp" />
             <stroke
                 android:width="2dp"
-                android:color="#38a0cd"
+                android:color="#E54728"
                 />
         </shape>
     </item>
