--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/restart"
         android:textAllCaps="false"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/rounded_button"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         />
