--- a/app/src/main/res/layout/stop_layout.xml
+++ b/app/src/main/res/layout/stop_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_centerInParent="true"
+    android:layout_margin="10dp"
     android:background="@color/white">
 
     <RelativeLayout
@@ -14,6 +15,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         >
 
 
@@ -29,7 +31,7 @@
         <!--</android.support.v7.widget.CardView>-->
 
         <TextView
-            android:id="@+id/tvUserName"
+            android:id="@+id/tvStopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -39,18 +41,18 @@
             android:gravity="left|start"
             android:maxLength="14"
             android:maxLines="1"
-            android:text="User Name"
+            android:text="Stop Name"
             android:textColor="@color/colorApp"
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/tvTaskDetails"
+            android:id="@+id/tvStopType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tvUserName"
-            android:layout_below="@+id/tvUserName"
+            android:layout_alignStart="@+id/tvStopName"
+            android:layout_below="@+id/tvStopName"
             android:layout_marginTop="4dp"
-            android:text="Buy this Bag"
+            android:text="Type"
             android:textColor="@color/colorWelcome"
             android:textSize="13sp" />
 
@@ -58,15 +60,16 @@
             android:id="@+id/tvPickupLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tvTaskDetails"
-            android:layout_below="@+id/tvTaskDetails"
+            android:layout_alignStart="@+id/tvStopType"
+            android:layout_below="@+id/tvStopType"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="-57dp"
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:text="Galleria 40, cairo egypt"
             android:textColor="@color/colorWelcome"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:visibility="gone"/>
 
 
     </RelativeLayout>
