--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -8,7 +8,7 @@
 
     You can also add your credentials to an existing key, using these values:
 
-    Package name:
+    Package AdminName:
     05:D6:C0:42:88:53:09:62:0F:C2:56:60:7F:1B:30:92:18:10:01:8B
 
     SHA-1 certificate fingerprint:
