--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -46,7 +46,7 @@
     </RelativeLayout>
 
     <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--            android:id="@+id/fab"-->
+    <!--            android:StopID="@+StopID/fab"-->
     <!--            android:layout_width="wrap_content"-->
     <!--            android:layout_height="wrap_content"-->
     <!--            android:layout_gravity="bottom|end"-->
