--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -28,13 +28,13 @@
                 android:padding="10dp">
 
                 <ImageView
-                    android:id="@+id/btnBack"
+                    android:id="@+id/ivBack"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
-                    android:clickable="true"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
                     app:srcCompat="@drawable/ic_back" />
 
                 <TextView
@@ -52,7 +52,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tvDelete"
+                    android:id="@+id/tvDeleteTask"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -87,17 +87,39 @@
                     android:text="Ticket"
                     android:textSize="15sp" />
 
-                <Spinner
+                <!--                <Spinner-->
+                <!--                    android:id="@+id/sTicket"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="10dp"-->
+                <!--                    android:layout_marginBottom="10dp"-->
+                <!--                    android:textSize="15sp"-->
+                <!--                    android:gravity="center"-->
+                <!--                    android:imeOptions="actionNext"-->
+                <!--                    android:selectAllOnFocus="true"-->
+                <!--                    android:textAlignment="center"-->
+                <!--                    android:clickable="false"-->
+                <!--                    />-->
+                <AutoCompleteTextView
                     android:id="@+id/sTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:textSize="15sp"
-                    android:gravity="center"
+                    android:background="@color/transparent"
+                    android:clickable="true"
+                    android:cursorVisible="false"
+                    android:drawableRight="@drawable/ic_down"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:fontFamily="Poppins-Regular"
+                    android:gravity="center|left"
                     android:imeOptions="actionNext"
-                    android:selectAllOnFocus="true"
-                    android:textAlignment="center" />
+                    android:inputType="none"
+                    android:maxLines="1"
+                    android:text="@string/select_ticket"
+                    android:textColor="@color/colorLabel"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <EditText
@@ -108,11 +130,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:textSize="15sp"
-                android:hint="Task Name"
+                android:hint="@string/task_name"
                 android:imeOptions="actionNext"
                 android:inputType="text"
-                android:selectAllOnFocus="true" />
+                android:selectAllOnFocus="true"
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/etAmount"
@@ -122,11 +144,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:textSize="15sp"
-                android:hint="Amount"
+                android:hint="@string/amount"
                 android:imeOptions="actionNext"
                 android:inputType="text|numberDecimal"
-                android:selectAllOnFocus="true" />
+                android:selectAllOnFocus="true"
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:id="@+id/llCourier"
@@ -146,17 +168,37 @@
                     android:text="Courier"
                     android:textSize="15sp" />
 
-                <Spinner
+                <!--                <Spinner-->
+                <!--                    android:id="@+id/sCourier"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="10dp"-->
+                <!--                    android:layout_marginBottom="10dp"-->
+                <!--                    android:gravity="center"-->
+                <!--                    android:imeOptions="actionNext"-->
+                <!--                    android:textSize="15sp"-->
+                <!--                    android:selectAllOnFocus="true"-->
+                <!--                    android:textAlignment="center" />-->
+                <AutoCompleteTextView
                     android:id="@+id/sCourier"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
+                    android:background="@color/transparent"
+                    android:clickable="true"
+                    android:cursorVisible="false"
+                    android:drawableRight="@drawable/ic_down"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:fontFamily="Poppins-Regular"
+                    android:gravity="center|left"
                     android:imeOptions="actionNext"
-                    android:textSize="15sp"
-                    android:selectAllOnFocus="true"
-                    android:textAlignment="center" />
+                    android:inputType="none"
+                    android:maxLines="1"
+                    android:text="@string/select_courier"
+                    android:textColor="@color/colorLabel"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <RelativeLayout
@@ -175,7 +217,7 @@
                     android:fontFamily="Poppins-Regular"
                     android:text="@string/stops"
                     android:textColor="@color/title_color"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tvAddStop"
@@ -202,32 +244,33 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="10dp"
                 android:visibility="gone">
+
                 <TextView
                     android:id="@+id/tvGetLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                   android:layout_centerHorizontal="true"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="Pilot Mode"
-                    android:textStyle="bold"
                     android:textColor="@color/colorApp"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/etStopName"
-                    android:layout_below="@+id/tvGetLocation"
-                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvGetLocation"
+                    android:layout_marginTop="10dp"
                     android:hint="@string/stop_name"
-                    android:textSize="15sp"
                     android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:selectAllOnFocus="true" />
+                    android:selectAllOnFocus="true"
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:id="@+id/llStopType"
@@ -243,7 +286,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:text="Stop Type"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <Spinner
                         android:id="@+id/sStopType"
@@ -251,11 +294,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:textSize="15sp"
                         android:gravity="center"
                         android:imeOptions="actionNext"
                         android:selectAllOnFocus="true"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <EditText
@@ -265,9 +308,9 @@
                     android:layout_below="@+id/llStopType"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:textSize="15sp"
                     android:hint="@string/latitude"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberDecimal"
+                    android:textSize="15sp" />
 
                 <EditText
                     android:id="@+id/etLongitude"
@@ -276,9 +319,9 @@
                     android:layout_below="@+id/etLatitude"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:textSize="15sp"
                     android:hint="@string/longitude"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberDecimal"
+                    android:textSize="15sp" />
 
                 <ImageButton
                     android:id="@+id/btnAddStopLocation"
@@ -291,14 +334,15 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/button_bg"
                     android:src="@drawable/ic_location" />
+
                 <TextView
                     android:id="@+id/tvClearStop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/etLongitude"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_alignParentEnd="true"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:gravity="center"
@@ -318,8 +362,6 @@
             </RelativeLayout>
 
 
-
-
             <Button
                 android:id="@+id/btnSave"
                 android:layout_width="match_parent"
@@ -328,12 +370,12 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="60dp"
                 android:background="@drawable/rounded_button"
-                android:text="Save"
+                android:text="@string/save"
                 android:textAllCaps="false"
-                android:textSize="20sp"
-                android:textColor="@color/colorSecondary" />
+                android:textColor="@color/colorSecondary"
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
