--- a/app/src/main/res/layout/stop_layout.xml
+++ b/app/src/main/res/layout/stop_layout.xml
@@ -4,28 +4,27 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
     android:layout_centerInParent="true"
+    android:layout_centerHorizontal="true"
     android:layout_margin="10dp"
     android:background="@color/white">
 
     <RelativeLayout
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="112dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        >
+        android:layout_marginBottom="10dp">
 
 
         <ImageView
             android:id="@+id/ivProductImage"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder" />
         <!--</android.support.v7.widget.CardView>-->
@@ -49,29 +48,31 @@
             android:id="@+id/tvStopType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tvStopName"
             android:layout_below="@+id/tvStopName"
+            android:layout_alignStart="@+id/tvStopName"
             android:layout_marginTop="4dp"
             android:text="Type"
             android:textColor="@color/colorWelcome"
             android:textSize="13sp" />
 
+
         <TextView
-            android:id="@+id/tvPickupLocation"
+            android:id="@+id/tvDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tvStopType"
-            android:layout_below="@+id/tvStopType"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="-57dp"
-            android:layout_marginTop="4dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:ellipsize="end"
-            android:text="Galleria 40, cairo egypt"
-            android:textColor="@color/colorWelcome"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="@string/delete"
+            android:textColor="@color/red"
             android:textSize="13sp"
-            android:visibility="gone"/>
-
-
+            android:textStyle="bold|italic" />
     </RelativeLayout>
 
 
