--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -231,7 +231,7 @@
                     android:gravity="center"
                     android:text="@string/add_new"
                     android:textColor="@color/colorApp"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -255,7 +255,7 @@
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:gravity="center"
-                    android:text="Pilot Mode"
+                    android:text="Select Location"
                     android:textColor="@color/colorApp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -323,7 +323,7 @@
                     android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
-                <ImageButton
+                <Button
                     android:id="@+id/btnAddStopLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -331,9 +331,10 @@
                     android:layout_centerInParent="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/button_bg"
-                    android:src="@drawable/ic_location" />
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/rounded_button"
+                    android:textColor="@color/colorSecondary"
+                    android:text="@string/add_new"/>
 
                 <TextView
                     android:id="@+id/tvClearStop"
@@ -346,9 +347,10 @@
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:gravity="center"
-                    android:text="Clear"
+                    android:text="@string/clear"
                     android:textColor="@color/colorApp"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:visibility="invisible"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvStops"
@@ -356,7 +358,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvClearStop"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="24dp"
                     android:scrollbars="vertical" />
             </RelativeLayout>
