--- a/app/src/main/res/layout/fragment_ticket_details.xml
+++ b/app/src/main/res/layout/fragment_ticket_details.xml
@@ -14,7 +14,7 @@
         android:fillViewport="true"
         android:fitsSystemWindows="true"
         android:scrollbars="none">
-
+        <requestFocus />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -73,6 +73,8 @@
                         android:text="@string/kadabra"
                         android:textColor="@color/black"
                         android:textSize="28sp" />
+
+
 
                     <TextView
                         android:id="@+id/tvTicketDetails"
@@ -156,9 +158,9 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tvAddTask"
                         android:layout_centerHorizontal="true"
-                        android:scrollbars="vertical"
                         android:layout_margin="20dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:scrollbars="vertical" />
 
 
                 </RelativeLayout>
