--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <color name="colorPrimary">#059719</color>-->
-<!--    <color name="colorPrimaryDark">#059719</color>-->
-<!--    <color name="colorAccent">#E54728</color>-->
+<!--    <color PaymentName="colorPrimary">#059719</color>-->
+<!--    <color PaymentName="colorPrimaryDark">#059719</color>-->
+<!--    <color PaymentName="colorAccent">#E54728</color>-->
     <color name="colorPrimary">#E54728</color>
     <color name="colorPrimaryDark">#E54728</color>
     <color name="colorAccent">#059719</color>
