add ticket and fix bugs

--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -35,6 +35,7 @@
         android:tint="@android:color/white"
         app:fabSize="normal"
         app:layout_anchor="@id/bottomAppBar"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        app:srcCompat="@drawable/ic_add_black_24dp"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
