--- a/app/src/main/res/layout/stop_layout.xml
+++ b/app/src/main/res/layout/stop_layout.xml
@@ -33,12 +33,12 @@
             android:id="@+id/tvStopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
             android:layout_toEndOf="@+id/ivProductImage"
+            android:gravity="start"
             android:ellipsize="end"
-            android:gravity="left|start"
-            android:maxLength="14"
             android:maxLines="1"
             android:text="Stop Name"
             android:textColor="@color/colorApp"
