--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -26,11 +26,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
             android:layout_toEndOf="@+id/ivProductImage"
-            android:ellipsize="end"
-            android:gravity="left|start"
-            android:maxLength="14"
+            android:gravity="start"
             android:maxLines="1"
+            android:ellipsize="end"
             android:text="@string/kadabra"
             android:textColor="@color/colorApp"
             android:textSize="13sp"
@@ -44,6 +44,10 @@
             android:layout_below="@+id/tvTaskName"
             android:layout_alignStart="@+id/tvTaskAmount"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="start"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="@string/from"
             android:textColor="@color/colorWelcome"
             android:textSize="13sp" />
@@ -55,6 +59,10 @@
             android:layout_below="@+id/tvPickupLocation"
             android:layout_alignStart="@+id/tvTaskName"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="start"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="@string/to"
             android:textColor="@color/colorWelcome"
             android:textSize="13sp" />
